# fedbot

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  NOTICE.txt  README.md  fedbot.py  requirements.txt
.cargo/: config.toml
migration/: Cargo.toml  NOTICE.txt
migration/src/: lib.rs  m20230424_115243_entry_modals.rs
src/: main.rs
src/entities/: mod.rs  prelude.rs  servers.rs
src/ext/: assorted.rs  entry_modal.rs  image_filtering.rs  mod.rs  profanity_checks.rs  profile_setup.rs  triggers.rs  user_screening.rs
