[package]
name = "fedbot"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
debug = 0
lto = "off"

[dependencies]
dotenv = "^0.15.0"
poise = { version = "^0.5.2", features = ["time", "cache"] }
tokio = { version = "^1.27.0", features = [ "rt", "macros", "rt-multi-thread" ] }
rustrict = { version = "^0.7.4", features = ["customize"] } 
sea-orm = { version = "^0.11.2", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print" ] }
dunce = "^1.0.3"
tracing = "^0.1.37"
tracing-subscriber = "^0.3.16"
tracing-appender = "^0.2.2"
image_hasher = "^1.1.2"
image = "^0.24.6"
reqwest = { version = "^0.11.16", features = ["stream", "rustls-tls"], default-features = false }
http-cache-reqwest = "^0.9.0"
reqwest-middleware = "^0.2.1"
regex = "^1.7.3"
lazy_static = "^1.4.0"
rand = "^0.8.5"
itertools = "^0.10.5"
rmp-serde = "^1.1.1"
serde = "^1.0.159"
uuid = { version = "^1.3.0", features = ["v4", "fast-rng"] }
futures-lite = "^1.12.0"
chrono-tz = "^0.8.1"
chrono = "^0.4.24"
strsim = "^0.10.0"
base64 = "0.21.0"