[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "^0.11.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "sqlx-sqlite", "runtime-tokio-rustls"
]

[patch.crates-io]
# Applies https://github.com/SeaQL/sea-query/pull/556 manually to fix https://github.com/SeaQL/sea-orm/issues/1067
# sea-query = "^0.28.3"
sea-query = { git = "https://github.com/cyanoj/sea-query-patch", branch="sqlite-bigint-fix-0.28.x" }